--- a/root/index.html
+++ b/root/index.html
@@ -7,124 +7,126 @@
     <title>Fifo home page</title>
       <link rel="icon" href="../Favicon/favicon.ico">
       <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <<link rel="stylesheet" href="css/styles.css">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
+      <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
+      <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-   <header>
-     <nav class="navbar fixed-top navbar-expand-lg navbar-light">
-      <a href="index.html" class="navbar-brand ml-3">Fifo<span style="color:#0008E8;">solutions</span></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu" aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle Navigation">
-         <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse"></div>
-      <div class="collapse navbar-collapse" id="navbarMenu">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-             <a href="#" class="nav-link">Home</a>
-          </li>
-          <li class="nav-item">
-             <a href="#" class="nav-link">Services</a>
-          </li>
-          <li class="nav-item">
-             <a href="#" class="nav-link">Clients</a>
-          </li>
-          <li class="nav-item">
-             <a href="#" class="nav-link">Job Seeker</a>
-          </li>
-          <li class="nav-item">
-             <a href="#" class="nav-link">Carrers</a>
-          </li>
-          <li class="nav-item">
-             <a href="#" class="nav-link">About us</a>
-          </li>
-          <li class="nav-item">
-             <a href="#" class="nav-link">Contact us</a>
-          </li>
-        </ul>
-        <!--<form class="form-inline my-2 my-lg-0">-->
-          <button class="btn menu-right-btn border" type="submit">
-            Employee login</button>
-
-
-        </form>
-      </div>
-     </nav>
+    <header>
+      <nav class="navbar navbar-expand-md navbar-dark ">
+         <a href="index.html" class="navbar-brand ml-3"><img src="images/output-onlinepngtools.png" class="logo" alt="" style="width:130px;height:75px;float:left;"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+         <div class="collapse navbar-collapse"></div>
+         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="aboutus.html">About Us</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown" role="button" data-toggle="dropdown">Services</a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                 <a class="dropdown-item" href="staffing.html">IT Staffing & Consulting</a>
+                 <div class="dropdown-divider"></div>
+                 <a class="dropdown-item" href="training.html">Training</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="careers.html">Careers</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contactus.html">Contact Us</a>
+            </li>
+          </ul>
+            <a href="pages/login.html" target="_blank"><i class="fa fa-user emp"></i></a>
+        </div>
+      </nav>
    </header>
    <main>
-
-    <div class="container-fluid p-0 background">
-      <div class="site-content transbox">
-        <div class="d-flex justify-content-center">
-          <div class="d-flex flex-column">
-            <h1 class="site-title text-success">Welcome to FifoSolutions</h1>
-          <!--  <h1 class="site-title text-secondary">Turn your passion into<br> your career</h1>-->
-            <p class="site-desc">Here you can turn your passion into your career</p>
-
-          </div>
-
-        </div>
-
-      </div>
-   </div>
-    <div class="section-1">
-      <div class="container text-center">
-        <h1 class="heading-1">How it works?</h1>
-
-        <!--<p class="para-1">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout</p>-->
-        <div class="row justify-content-center text-center">
-          <div class="col-md-4">
-             <div class="card"><!-- style="width:20rem;-->
-               <!--<img src="images/scott-graham-5fNmWej4tAA-unsplash.jpg" alt="image1" class="card-img-top">-->
-               <i class="fa fa-graduation-cap icon" aria-hidden="true"></i>
-               <div class="card-body">
-                 <h4 class="card-title">Job seeker</h4>
-                 <p class="card-text">Wherever you desire to go, we give you the tools, the techniques, and the teams to navigate
-                   the journey. So you’re inspired to build. </p>
-               </div>
+    <!--section1-->
+     <div class="slide-container">
+       <div class="slide-box" style="background-image: url('images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg');">
+           <div class="slide-box-containt">
+            <h2>Success usually comes to those who are too busy to be looking for it</h2>
            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card"><!-- style="width:20rem;"-->
-              <i class="fa fa-users icon" aria-hidden="true"></i>
-            <div class="card-body">
-                <h4 class="card-title">Bench sales recruiter</h4>
-                <p class="card-text">We are not just a technology company full of people, we’re a people company full of technology.It is people like you who make us what we are today  </p>
-              </div>
-          </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card"><!-- style="width:20rem;"-->
-              <i class="fa fa-user-circle-o icon" aria-hidden="true"></i>
-            <div class="card-body">
-                <h4 class="card-title">Employer</h4>
-                <p class="card-text">It was observed that there has been an increase in recruitment fraud involving scammers who post fraudulent jobs openings. </p>
-              </div>
-          </div>
-          </div>
-        </div>
-      </div>
-
+       </div>
+       <div class="slide-box" style="background-image:url('images/pexels-oleg-magni-2058130.jpg');">
+          <div class="slide-box-containt">
+            <h2>Welcome to Fifo solutions</h2>
+            <p>Here you can turn your passion into your career.</p>
+         </div>
+       </div>
+       <div class="slide-box" style="background-image:url('images/pexels-christina-morillo-1181304.jpg');">
+         <div class="slide-box-containt">
+            <h2>WE will provide you the job by giving training also.</h2>
+         </div>
+       </div>
+     </div>
+<!--section2-->
+  <section id="service">
+    <div class="title-text">
+      <h1 class="heading-1">What we do?</h1>
     </div>
-    <div class="section-2">
-      <div class="container-fluid">
-        <div class="d-flex justify-content-end">
-          <div class="d-flex flex-column m-4">
-            <h1 class="s2 heading-1 text-success">We will provide you the best training</h1><!--heading-1 para-->
-            <p class="s2 para text-secondary"> There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
-            <input type="button" value="Join with us" class="btn btn-danger">
-          </div>
-        </div>
+    <div class="service-box">
+      <div class="single-service">
+        <img src="images/pexels-oleg-magni-2058130.jpg" alt="">
+        <div class="overlay"></div>
+        <a href="jobseekerreg.html">
+        <div class="service-desc">
+          <h3>Job seeker</h3>
+          <hr>
+          <p>We are not just a technology company full of people, we’re a people company full of technology.It is people like you who make us what we are today.</p>
+        </div></a>
       </div>
+      <div class="single-service">
+          <img src="images/pexels-rebrand-cities-1367271.jpg" alt="">
+          <div class="overlay"></div>
+            <a href="benchsalesreg.html">
+            <div class="service-desc">
+              <h3>Bench sales</h3>
+              <hr>
+              <p>We are not just a technology company full of people, we’re a people company full of technology.It is people like you who make us what we are today</p>
+              </div>
+            </a>
+        </div>
+        <div class="single-service">
+            <img src="images/pexels-christina-morillo-1181611.jpg" alt="">
+            <div class="overlay"></div>
+            <a href="vendorreg.html">
+            <div class="service-desc">
+            <h3>Vendors</h3>
+              <hr>
+              <p>We are not just a technology company full of people, we’re a people company full of technology.It is people like you who make us what we are today</p>
+              </div>
+            </a>
+       </div>
+       <div class="single-service">
+           <img src="images/pexels-christina-morillo-1181346.jpg" alt="">
+            <div class="overlay"></div>
+            <a href="trainingreg.html">
+            <div class="service-desc">
+             <h3>Training</h3>
+              <hr>
+              <p>We are not just a technology company full of people, we’re a people company full of technology.It is people like you who make us what we are today</p>
+             </div>
+           </a>
+       </div>
     </div>
+  </section>
+<!--section3-->
     <div class="section-3">
       <div class="container">
-
-        <div class="row">
+       <div class="row">
           <div class="col-md-4">
             <div class="d-flex flex-row">
-              <div class="d-flex flex-column">
+                <div class="d-flex flex-column">
                    <h3 class="m-2">24/7 support</h3>
                    <p class="m-2">
                      It is a long established fact that a reader will be distracted by the readable content
@@ -146,7 +148,6 @@
           </div>
           <div class="col-md-4">
             <div class="d-flex flex-row">
-                <!--<i class="fa fa-rocket fa-3x m-2" aria-hidden="true"></i>-->
                 <div class="d-flex flex-column">
                    <h3 class="m-2">sales</h3>
                    <p class="m-2">
@@ -156,12 +157,11 @@
                 </div>
             </div>
           </div>
-
-        </div>
+       </div>
       <div class="row mt-2">
          <div class="col-md-4">
                <div class="d-flex flex-row">
-                  <div class="d-flex flex-column">
+                 <div class="d-flex flex-column">
                      <h3 class="m-2">Major services</h3>
                      <p class="m-2"> It is a long established fact that a reader will be distracted by the readable content
                       s of a page when looking at its layout. The point of using Lorem</p>
@@ -170,7 +170,6 @@
          </div>
          <div class="col-md-4">
            <div class="d-flex flex-row">
-
                <div class="d-flex flex-column">
                  <h3 class="m-2">Xyz</h3>
                  <p class="m-2"> It is a long established fact that a reader will be distracted by the readable content
@@ -180,7 +179,7 @@
          </div>
          <div class="col-md-4">
            <div class="d-flex flex-row">
-            <div class="d-flex flex-column">
+           <div class="d-flex flex-column">
                  <h3 class="m-2">our clients</h3>
                  <p class="m-2"> It is a long established fact that a reader will be distracted by the readable content
                   s of a page when looking at its layout. The point of using Lorem</p>
@@ -188,10 +187,9 @@
             </div>
          </div>
       </div>
-
-
-      </div>
-      </div>
+   </div>
+  </div>
+  <!--section4-->
      <div class="section-4 bg-dark">
        <div class="container">
          <div class="row">
@@ -200,68 +198,85 @@
             </div>
             <div class="col-md-5">
               <h1 class="text-white">Do you want to get a job which fulfills your dream.</h1>
-              <a href="#">join us</a>
+              <a href="jobseekerreg.html">Join us</a>
               <p class="para-1"> It is a long established fact that a reader will be distracted by the readable content
                s of a page when looking at its layout. The point of using Lorem</p>
             </div>
          </div>
-
-       </div>
+        </div>
      </div>
-   </main>
+    <!--section-5-->
+    <section id="clients" class="section-bg">
+    <div class="container">
+        <div class="section-header">
+            <h3>Our CLients</h3>
+            <p>Meet our happy clients</p>
+        </div>
+        <div class="row no-gutters clients-wrap clearfix wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
+            <div class="col-lg-3 col-md-4 col-xs-6">
+                <div class="client-logo"> <img src="images/Apple-02.png" class="img-fluid" alt=""> </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6">
+                <div class="client-logo"> <img src="images/Infosys_logo.png" class="img-fluid" alt=""> </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6">
+                <div class="client-logo"> <img src="images/tcs-3.png" class="img-fluid" alt=""> </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6">
+                <div class="client-logo"> <img src="images/Tech-Mahindra-01.png" class="img-fluid" alt=""> </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6">
+                <div class="client-logo"> <img src="images/pngfind.com-capgemini-logo-png-4899855.png" class="img-fluid" alt=""> </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6">
+                <div class="client-logo"> <img src="images/Microsoft-01.png" class="img-fluid" alt=""> </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6">
+                <div class="client-logo"> <img src="images/Intel-01.png" class="img-fluid" alt=""> </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6">
+                <div class="client-logo"> <img src="images/cognizant-vector-logo.png" class="img-fluid" alt=""> </div>
+            </div>
+        </div>
+    </div>
+</section>
+</main>
    <!--<footer>-->
-      <div class="section-5 text-center">
-        <h4 style:"margin-top:25%;">Get mails from us</h4>
-        <h5 class="my-4">If you need any help</h5>
-        <div class="form-inline justify-content-center">
-          <input type="text" name="Email" id="email" placeholder="Email" size="40" class="form-control px-4 py-2">
-          <input type="button" value="contact us" class="btn btn-danger px-4 py-2">
+   <footer class="footer-distributed">
+       <div class="footer-left ">
+         <h2>Address</h2>
+         <address class="address">
+          <span>21 Revolution Street<br>
+          vizag, Andhra pradesh,<br>
+          India<br>
+          +1 667 123456<br>
+           P O Box: 117537<br></span>
+          </address>
+        </div>
+       <div class="footer-center">
+        <div>
+          <h2>Contact Us</h2>
+           <p class="foot1">Telephone:+971 43206111</p><br>
+           <p class="foot1">WhatsApp: +971 552096715</p><br>
+           <p class="foot1">Email: info@fifosolutions.com</p>
+           <div class="footer-icons">
+             <a href="#"><i class="fa fa-facebook"></i></a>
+             <a href="#"><i class="fa fa-twitter"></i></a>
+             <a href="#"><i class="fa fa-linkedin"></i></a>
+             <a href="#"><i class="fa fa-github"></i></a>
+            </div>
         </div>
       </div>
-
-   </footer>-->
-   <footer class="footer-distributed">
-
-   <div class="footer-left">
-
-      <h2>Address</h2>
-      <address class="address">
-        <span>21 Revolution Street<br>
-        vizag, Andhra pradesh,<br>
-        India<br>
-        +1 667 123456<br>
-        P O Box: 117537<br></span>
-      </address>
-   </div>
-   <div class="footer-center">
-    <div>
-     <h2>Contact Us</h2>
-     <p class="foot1">Telephone:+971 43206111</p><br>
-     <p class="foot1">WhatsApp: +971 552096715</p><br>
-     <p class="foot1">Email: info@fifosolutions.com</p>
-     <div class="footer-icons">
-        <a href="#"><i class="fa fa-facebook"></i></a>
-         <a href="#"><i class="fa fa-twitter"></i></a>
-         <a href="#"><i class="fa fa-linkedin"></i></a>
-         <a href="#"><i class="fa fa-github"></i></a>
-      </div>
-   </div>
-
-   </div>
-
-   <div class="footer-right">
+     <div class="footer-right">
        <p class="footer-company-about"> <span>Fifo Solutions</span>
-    Our journey strated in the year 2019 through our parent
-  entity providing management consultancy services. The need
-  for a separate platform for delivering corporate services was inevitable, and Profound Business Services LLC was
-   established.</p>
-
-    </div>
-
-   </footer>
-
+          Our journey strated in the year 2019 through our parent
+         entity providing management consultancy services. The need
+        for a separate platform for delivering corporate services was inevitable, and Profound Business Services LLC was
+         established.</p>
+      </div>
+ </footer>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-  </body>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+</body>
 </html>
