--- a/root/pages/careers.html
+++ b/root/pages/careers.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Fifo careers page</title>
       <link rel="icon" href="../Favicon/favicon.ico">
+      <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu" rel="stylesheet">
       <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -13,55 +14,47 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg"><!-- fixed-top-->
-      <a href="index.html" class="navbar-brand ml-3">Fifo<span style="color:#0008E8;">solutions</span></a>
-      <!--<a href="index.html" class="navbar-brand ml-3"><img src="../images/fifo logo.png" class="logo" alt=""></a>-->
-     <!--  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu" aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle Navigation">-->
-         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-       </button>
-       <div class="collapse navbar-collapse"></div>
-       <div class="collapse navbar-collapse" id="navbarSupportedContent"><!--navbarMenu">-->
-         <ul class="navbar-nav ml-auto">
-           <li class="nav-item">
-              <a href="index.html" class="nav-link">Home</a>
-           </li>
-           <li class="nav-item">
-              <a href="aboutus.html" class="nav-link">About us</a>
-           </li>
-           <li class="nav-item dropdown">
-             <a href="services.html" class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-               Services
-             </a>
-             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-               <a class="dropdown-item" href="staffing.html">IT staffing & consulting</a>
-               <a class="dropdown-item dropright" href="training.html">Training</a>
-             </div>
-
-           </li>
-           <li class="nav-item active">
-              <a href="careers.html" class="nav-link">Carrers</a>
-           </li>
-           <li class="nav-item">
-              <a href="contactus.html" class="nav-link">Contact us</a>
-           </li>
-         </ul>
-
-           <a href="login.html" target="_blank"><i class="fa fa-user emp"></i></a>
-
-       </div>
+      <nav class="navbar navbar-expand-md navbar-dark ">
+         <a href="index.html" class="navbar-brand ml-3"><img src="../images/output-onlinepngtools.png" class="logo" alt="" style="width:130px;height:75px;float:left;"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+         <div class="collapse navbar-collapse"></div>
+         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="aboutus.html">About Us</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown" role="button" data-toggle="dropdown">Services</a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                 <a class="dropdown-item" href="staffing.html">IT Staffing & Consulting</a>
+                 <div class="dropdown-divider"></div>
+                 <a class="dropdown-item" href="training.html">Training</a>
+              </div>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="careers.html">Careers</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contactus.html">Contact Us</a>
+            </li>
+          </ul>
+            <a href="login.html" target="_blank"><i class="fa fa-user emp"></i></a>
+        </div>
       </nav>
-    </header>
+   </header>
   <main>
     <div class="container-fluid p-0 background">
       <div class="site-content transbox">
         <div class="d-flex justify-content-left">
           <div class="d-flex flex-column">
             </div>
-
+           </div>
         </div>
-
-      </div>
    </div>
    <!--section2-->
    <div class="section-2">
@@ -69,30 +62,20 @@
        <div class="d-flex justify-content-start">
          <div class="d-flex flex-column m-4">
            <h1 class="heading-1 d-flex justify-content-center">CAREER COUNSELLING</h1>
-           <h3>What We Do..</h3><!--heading-1 para-->
-           <p class="para text-secondary">Fifosolutions is a leading provider of services and solutions to clients across the United States and globally. Many of these clients are large national and international organizations.
-             Organizations need individuals with cloud skills to help transform their business.
-              Our content is built by experts at fifo and updated regularly to keep pace with fifo updates, so you
-              can be sure you’re learning the latest and keeping your cloud skills fresh.Organizations need individuals with cloud skills to help transform their business.
-                  Training and Certification helps you build and validate your cloud skills so you can get more out of the cloud.
-                 Our content is built by experts at AWS and updated regularly to keep pace with updates, so you
-                 can be sure you’re learning the latest and keeping your cloud skills fresh.</p>
+           <h3>What We Do..</h3>
+           <p class="para text-secondary">Fifo has a proven,successful track record for placing candidates with a variety of visa status including H1-B and OTP. We belive in connecting the right people
+             to the right window to make remarkable things happen.With a plethora of possibilities,we'll find one tailored for you, one that is not just a job but a chance to realize
+             your full potential as you become a part of something you'll be proud of. If you would like to work with Fifo solutions, kindly submit your resume or contact us for more information.</p>
                <h3>Career Counseling Services</h3>
-              <p class="para text-secondary">There is a good deal of career counseling services for young people. The careers advice service is very beneficial for these youngsters to select and establish their careers. At Advithri Technologies., we are providing career guidance to students and young people to select the right career and be established in life. If you are looking for a career change, job-hunting advice or mentoring then we can make your search a bit easier. Advithri Technologies is a professional career consultant and consulting services provider to clients all over the world with over 5 years of experience in the field..</p>
-              <h3>New career paths</h3><!--heading-1 para-->
+              <p class="para text-secondary">There is a good deal of career counseling services for young people. The careers advice service is very beneficial for these youngsters to select and establish their careers. At Fifo Solutions., we are providing career guidance to students and young people to select the right career and be established in life. If you are looking for a career change, job-hunting advice or mentoring then we can make your search a bit easier. Fifo Solutions is a professional career consultant and consulting services provider to clients.</p>
+              <h3>New career paths</h3>
               <p class="para text-secondary">The traditional paths of career are always there. In the current times; many new career options have developed. Many people are just not aware of them. Even if they are aware, people are not confident in pursuing them. Yet, many of these new career streams are very promising. It is the duty of the counselors to show them the light. These people can show ways to pursue these new paths and the opportunities that lie across them. Normally most of the general people are afraid to tread new paths..</p>
 
                   <h5>Ready to explore a career from FifoSolutions? Just click on the below button to register as a job seeker..</h5>
-                  <form class="form-inline" action="trainingreg.html" method="post">
+                  <form class="form-inline" action="jobreg.html" method="post">
                       <button class="btn bg-success" type="submit">Register now</button>
                    </form>
-                <!--<h4><a class="anchor" href="">Click here to see the job opportunities.</a></h4>-->
-                <h1 class="heading-1">Benifits</h1>
-                <h3>We care about our consultants</h3>
-                <p class="para text-secondary">Fifosolutions is a leading provider of services and solutions to clients across the United States and globally. Many of these clients are large national and international organizations.
-                  Organizations need individuals with cloud skills to help transform their business.</p>
-                <h3>Equal Employment Opportunity</h3>
-                <p class="para text-secondary">We will provide job, training  all terms and conditions of consultant without regard to their race, color, religion, national origin, gender identity, age, protected veteran status, disability, or other protected categories under the applicable law.</p>
+
                 <h3>Why is FIFO Solutions? Good at Career Counseling?</h3><!--heading-1 para-->
                 <p class="para text-secondary">Career counseling may sound like a simple task or job to perform, but the reality is quite different. Several people may argue that they are the best career counselor for their family because of their wisdom and experience. However, the truth is quite different. Career Counseling indeed needs to be based on the talent and abilities of an individual; however, several other real-world factors that need to be taken into consideration along with the current trends..</p>
 
