--- a/root/pages/training.html
+++ b/root/pages/training.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Fifo training page</title>
       <link rel="icon" href="../Favicon/favicon.ico">
+      <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu" rel="stylesheet">
       <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -13,57 +14,49 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light"><!-- fixed-top-->
-      <a href="index.html" class="navbar-brand ml-3">Fifo<span style="color:#0008E8;">solutions</span></a>
-      <!--<a href="index.html" class="navbar-brand ml-3"><img src="../images/fifo logo.png" class="logo" alt=""></a>-->
-     <!--  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu" aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle Navigation">-->
-         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <header>
+        <nav class="navbar navbar-expand-md fixed-top navbar-dark ">
+           <a href="index.html" class="navbar-brand ml-3"><img src="../images/output-onlinepngtools.png" class="logo" alt="" style="width:130px;height:75px;float:left;"></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
-       </button>
-       <div class="collapse navbar-collapse"></div>
-       <div class="collapse navbar-collapse" id="navbarSupportedContent"><!--navbarMenu">-->
-         <ul class="navbar-nav ml-auto">
-           <li class="nav-item">
-              <a href="index.html" class="nav-link">Home</a>
-           </li>
-           <li class="nav-item">
-              <a href="aboutus.html" class="nav-link">About us</a>
-           </li>
-           <li class="nav-item dropdown">
-             <a href="services.html" class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-               Services
-             </a>
-             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-               <a class="dropdown-item" href="staffing.html">IT staffing & consulting</a>
-               <a class="dropdown-item dropright" href="training.html">Training</a>
-             </div>
-
-           </li>
-           <li class="nav-item">
-              <a href="careers.html" class="nav-link">Carrers</a>
-           </li>
-           <li class="nav-item">
-              <a href="contactus.html" class="nav-link">Contact us</a>
-           </li>
-         </ul>
-
-           <a href="login.html" target="_blank"><i class="fa fa-user emp"></i></a>
-
-       </div>
-      </nav>
-    </header>
+          </button>
+           <div class="collapse navbar-collapse"></div>
+           <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="aboutus.html">About Us</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown" role="button" data-toggle="dropdown">Services</a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                   <a class="dropdown-item" href="staffing.html">IT Staffing & Consulting</a>
+                   <div class="dropdown-divider"></div>
+                   <a class="dropdown-item" href="training.html">Training</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="careers.html">Careers</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contactus.html">Contact Us</a>
+              </li>
+            </ul>
+              <a href="login.html" target="_blank"><i class="fa fa-user emp"></i></a>
+          </div>
+        </nav>
+     </header>
   <main>
     <div class="container-fluid p-0">
       <div class="site-content">
-        <div class="d-flex justify-content-start">
+        <div class="d-flex justify-content-center">
           <div class="d-flex flex-column">
             <h1 class="site-title">Training</h1>
-          <!--  <h1 class="site-title text-secondary">Turn your passion into<br> your career</h1>-->
-            <p class="site-desc">Advance your skills and knowledge. Build your future by joining with us.</p>
+          <!-- <p class="site-desc">Advance your skills and knowledge. Build your future by joining with us.</p>-->
           </div>
-
         </div>
-
       </div>
    </div>
 <!--section1-->
@@ -71,22 +64,15 @@
   <div class="container-fluid">
     <div class="d-flex justify-content-start">
       <div class="d-flex flex-column m-4">
-        <h1 class="heading-1 text-success">We will provide you the best training</h1><!--heading-1 para-->
-        <p class="para text-secondary">Organizations need individuals with cloud skills to help transform their business.
-           AWS Training and Certification helps you build and validate your cloud skills so you can get more out of the cloud.
-           Our content is built by experts at AWS and updated regularly to keep pace with AWS updates, so you
-           can be sure you’re learning the latest and keeping your cloud skills fresh.Organizations need individuals with cloud skills to help transform their business.
-              AWS Training and Certification helps you build and validate your cloud skills so you can get more out of the cloud.
-              Our content is built by experts at AWS and updated regularly to keep pace with AWS updates, so you
-              can be sure you’re learning the latest and keeping your cloud skills fresh.<br><br>
-            We offer both digital and classroom training. Digital training allows you to learn online at your own pace. With classroom training,
-               learn best practices from an expert instructor. In addition to in-person classes, virtual training lets you take courses from anywhere. Whether you are just
-               starting out, building on existing IT skills, or sharpening your cloud knowledge, AWS Training and Certification can help you be more effective and do more in the cloud.</p>
+        <h1 class="heading-1 text-success">Training and Placements</h1><!--heading-1 para-->
+        <p class="para text-secondary">Exceptational grasping experiences require focus on individual learner needs. Our team works hard in hand with yours to cater the big picture and conceptbased framework of your learning solution. From there,we will make sure our learners are getting it right at the right time. We believe in making learning concepts compareble,relavent,understandable and practical that enables every learner excel in a go.<br><br>
+            Fifo Solutions provides training services on new upgrade technologies to in-house employees of the clients and on the other hand we train candidates on specific technologies and deploy at clients location for long term commitments.<br><br>
+          We have a process oriented training method that has empathy and respect. We will engage there attention with our passionate love for IT connected to cement learning, provide concepts to practice the skills as they learn them, and stand towards encouragement and motivation<br><br>
+          To get the best training register below</p>
                <form class="form-inline" action="trainingreg.html" method="post">
                    <button class="btn bg-danger" type="submit">Register now</button>
                 </form>
-
-       </div>
+         </div>
      </div>
    </div>
  </div>
@@ -94,58 +80,55 @@
  <div class="container-fluid s2">
    <div class="myh3 my-4">
    <h3 class="benifits mx-4">Benifits of getting training here:</h3>
- </div>
-         <div class="row">
-            <div class="col-md-3 text-center">
-              <div class="icon">
-                <i class="fa fa-desktop"></i>
-              </div>
-              <h3>Learn at Your Own Pace</h3>
-              <p>Choose on-demand training that's relevant to your role, solution area, and level of expertise.</p>
-            </div>
-            <div class="col-md-3 text-center">
-              <div class="icon">
-                <i class="fa fa-tablet"></i>
-              </div>
-              <h3>Train with an Expert</h3>
-              <p>Build technical skills and learn best practices from an accredited instructor. Choose in-person or virtual courses.</p>
-            </div>
-            <div class="col-md-3 text-center">
-              <div class="icon">
-                <i class="fa fa-line-chart"></i>
-              </div>
-              <h3>Pick Your Learning Path</h3>
-              <p>Build your cloud skills and advance toward AWS Certification with the role-based learning path that's right for you.</p>
-            </div>
-            <div class="col-md-3 text-center">
-              <div class="icon">
-                <i class="fa fa-paint-brush"></i>
-              </div>
-              <h3>Get the Certified</h3>
-              <p>Validate your AWS Cloud skills and enhance your credibility with an industry-recognized credential virtually with online proctoring or in a testing center.</p>
+   </div>
+   <div class="row">
+    <div class="col-md-3 text-center">
+    <div class="icon">
+        <i class="fa fa-desktop"></i>
+      </div>
+      <h3>Learn at Your Own Pace</h3>
+      <p>Choose on-demand training that's relevant to your role, solution area, and level of expertise.</p>
+      </div>
+      <div class="col-md-3 text-center">
+      <div class="icon">
+          <i class="fa fa-tablet"></i>
+      </div>
+      <h3>Train with an Expert</h3>
+      <p>Build technical skills and learn best practices from an accredited instructor. Choose in-person or virtual courses.</p>
+      </div>
+      <div class="col-md-3 text-center">
+       <div class="icon">
+          <i class="fa fa-line-chart"></i>
+        </div>
+        <h3>Pick Your Learning Path</h3>
+          <p>Build your cloud skills and advance toward Certification with the role-based learning path that's right for you.</p>
+        </div>
+        <div class="col-md-3 text-center">
+          <div class="icon">
+            <i class="fa fa-graduation-cap"></i>
+          </div>
+          <h3>Get the Certified</h3>
+            <p>Validate your skills and enhance your credibility with an industry-recognized credential virtually with online proctoring or in a testing center.</p>
             </div>
          </div>
        </div>
-        <!--<input type="button" value="Join with us" class="btn btn-danger">-->
-
-<!--footer-->
+    <!--footer-->
     <footer class="footer-distributed">
         <div class="footer-left ">
           <h2>Address</h2>
           <address class="address">
-           <span>21 Revolution Street<br>
-           vizag, Andhra pradesh,<br>
+           <span>D.no. 50-50-39,<br> TPT colony,<br>
+           seethamadara,<br>vizag,AP,<br>
            India<br>
-           +1 667 123456<br>
-            P O Box: 117537<br></span>
+           530013</span>
            </address>
          </div>
         <div class="footer-center">
          <div>
            <h2>Contact Us</h2>
             <p class="foot1">Telephone:+971 43206111</p><br>
-            <p class="foot1">WhatsApp: +971 552096715</p><br>
-            <p class="foot1">Email: info@fifosolutions.com</p>
+            <p class="foot1">WhatsApp: 310-742-5987</p><br>
+            <p class="foot1">Email: people@fifosolutions.com</p>
             <div class="footer-icons">
               <a href="#"><i class="fa fa-facebook"></i></a>
               <a href="#"><i class="fa fa-twitter"></i></a>
@@ -158,7 +141,7 @@
         <p class="footer-company-about"> <span>Fifo Solutions</span>
            Our journey strated in the year 2019 through our parent
           entity providing management consultancy services. The need
-         for a separate platform for delivering corporate services was inevitable, and Profound Business Services LLC was
+         for a separate platform for delivering corporate services was inevitable, and Profound Business Services was
           established.</p>
        </div>
   </footer>
