--- a/root/pages/login.html
+++ b/root/pages/login.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Fifo contactus page</title>
       <link rel="icon" href="../Favicon/favicon.ico">
+      <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu" rel="stylesheet">
       <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -13,59 +14,49 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light"><!-- fixed-top-->
-      <a href="index.html" class="navbar-brand ml-3">Fifo<span style="color:#0008E8;">solutions</span></a>
-      <!--<a href="index.html" class="navbar-brand ml-3"><img src="../images/fifo logo.png" class="logo" alt=""></a>-->
-     <!--  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu" aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle Navigation">-->
-         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-       </button>
-       <div class="collapse navbar-collapse"></div>
-       <div class="collapse navbar-collapse" id="navbarSupportedContent"><!--navbarMenu">-->
-         <ul class="navbar-nav ml-auto">
-           <li class="nav-item">
-              <a href="index.html" class="nav-link">Home</a>
-           </li>
-           <li class="nav-item">
-              <a href="aboutus.html" class="nav-link">About us</a>
-           </li>
-           <li class="nav-item dropdown">
-             <a href="services.html" class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-               Services
-             </a>
-             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-               <a class="dropdown-item" href="staffing.html">IT staffing & consulting</a>
-               <a class="dropdown-item dropright" href="training.html">Training</a>
-             </div>
-
-           </li>
-           <li class="nav-item">
-              <a href="careers.html" class="nav-link">Carrers</a>
-           </li>
-           <li class="nav-item">
-              <a href="contactus.html" class="nav-link">Contact us</a>
-           </li>
-         </ul>
-
-           <a href="login.html" target="_blank"><i class="fa fa-user emp"></i></a>
-
-       </div>
+      <nav class="navbar navbar-expand-md navbar-dark ">
+         <a href="index.html" class="navbar-brand ml-3"><img src="../images/output-onlinepngtools.png" class="logo" alt="" style="width:130px;height:75px;float:left;"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+         <div class="collapse navbar-collapse"></div>
+         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="aboutus.html">About Us</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown" role="button" data-toggle="dropdown">Services</a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                 <a class="dropdown-item" href="staffing.html">IT Staffing & Consulting</a>
+                 <div class="dropdown-divider"></div>
+                 <a class="dropdown-item" href="training.html">Training</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="careers.html">Careers</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contactus.html">Contact Us</a>
+            </li>
+          </ul>
+            <a href="login.html" target="_blank"><i class="fa fa-user emp"></i></a>
+        </div>
       </nav>
-    </header>
+   </header>
 <!--section-->
-
-  <section>
-
-    <div class="row">
+<section>
+     <div class="row">
          <h1>Welcome to fifosolutions</h1>
       <div class="wrapper">
-
       <div class="form">
         <div class="title">
           Login
         </div>
-
-        <form method="post" action="success.html" onsubmit="return validation();">
+       <form method="post" action="success.html" onsubmit="return validation();">
           <div class="input_wrap">
             <label for="input_text">Email</label>
             <div class="input_field">
@@ -91,8 +82,7 @@
     </div>
   </div>
     <script src="../js/login.js"></script>
-
-  </section>
+</section>
 
 <!--footer-->
     <footer class="footer-distributed">
