--- a/root/pages/staffing.html
+++ b/root/pages/staffing.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Fifo ITstaffing page</title>
       <link rel="icon" href="../Favicon/favicon.ico">
+      <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu" rel="stylesheet">
       <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -13,73 +14,65 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light"><!-- fixed-top-->
-      <a href="index.html" class="navbar-brand ml-3">Fifo<span style="color:#0008E8;">solutions</span></a>
-      <!--<a href="index.html" class="navbar-brand ml-3"><img src="../images/fifo logo.png" class="logo" alt=""></a>-->
-     <!--  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu" aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle Navigation">-->
-         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-       </button>
-       <div class="collapse navbar-collapse"></div>
-       <div class="collapse navbar-collapse" id="navbarSupportedContent"><!--navbarMenu">-->
-         <ul class="navbar-nav ml-auto">
-           <li class="nav-item">
-              <a href="index.html" class="nav-link">Home</a>
-           </li>
-           <li class="nav-item">
-              <a href="aboutus.html" class="nav-link">About us</a>
-           </li>
-           <li class="nav-item dropdown">
-             <a href="services.html" class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-               Services
-             </a>
-             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-               <a class="dropdown-item" href="staffing.html">IT staffing & consulting</a>
-               <a class="dropdown-item dropright" href="training.html">Training</a>
-             </div>
-
-           </li>
-           <li class="nav-item">
-              <a href="careers.html" class="nav-link">Carrers</a>
-           </li>
-           <li class="nav-item">
-              <a href="contactus.html" class="nav-link">Contact us</a>
-           </li>
-         </ul>
-
-           <a href="login.html" target="_blank"><i class="fa fa-user emp"></i></a>
-
-       </div>
+      <nav class="navbar navbar-expand-md fixed-top navbar-dark ">
+         <a href="index.html" class="navbar-brand ml-3"><img src="../images/output-onlinepngtools.png" class="logo" alt="" style="width:130px;height:75px;float:left;"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+         <div class="collapse navbar-collapse"></div>
+         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="aboutus.html">About Us</a>
+            </li>
+            <li class="nav-item active dropdown">
+              <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown" role="button" data-toggle="dropdown">Services</a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                 <a class="dropdown-item" href="staffing.html">IT Ctaffing & Consulting</a>
+                 <div class="dropdown-divider"></div>
+                 <a class="dropdown-item" href="training.html">Training</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="careers.html">Careers</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contactus.html">Contact Us</a>
+            </li>
+          </ul>
+            <a href="login.html" target="_blank"><i class="fa fa-user emp"></i></a>
+        </div>
       </nav>
-    </header>
+   </header>
   <main>
+    <!--section1-->
     <div class="container-fluid p-0">
       <div class="site-content">
         <div class="d-flex justify-content-start">
           <div class="d-flex flex-column">
-            <h1 class="site-title text-white">IT staffing and consulting services.</h1>
+          <!--  <h1 class="site-title text-white">IT staffing and consulting services.</h1>
           <!--  <h1 class="site-title text-secondary">Turn your passion into<br> your career</h1>-->
-            <p class="site-desc">Solutions designed to solve short term and long term IT staffing challenges.</p>
+          <!--  <p class="site-desc">Solutions designed to solve short term and long term IT staffing challenges.</p>-->
           </div>
-
         </div>
-
       </div>
    </div>
-
-
-<!--section-->
+<!--section2-->
 <div class="section-2">
   <div class="container-fluid">
     <div class="d-flex justify-content-start">
       <div class="d-flex flex-column m-4">
         <h1 class="heading-1">Our IT Staffing Services</h1>
         <h3>IT staffing augmentation</h3><!--heading-1 para-->
-        <p class="para text-secondary">Advithri Technologies is the best US IT staffing services and Solution Company also is a registered business enterprise. We are an assumption company of IT staffing services or solutions to source effective, competent, skillful IT staff in a wide range of sectors as customers need across the globe.
-
-Our objective is to have a real collaboration with your company and become extra time for Human Resources. We understand your competitive niche markets, dealing with each of our clients/customers individually, and concentrating on their unique needs. Our IT staffing experts perform a customized evaluation for perceptive skills to come up with the right candidature. We also handle the temporary workforce staffing and we are more than happy to assist you..</p>
-           <h3>Our IT Staffing services include:</h3>
-           <p class="para text-secondary"><strong>Project managers:</strong> Fully certified experts who can help manage your projects and ensure on time delivery.
+        <p class="para text-secondary">Bringing the dream of being employed into one of the best IT companies in the world is not an easy feet, especially
+        in todays hiring climate. One would need a consultant and staffing partner, who has the right expertise and vision who can put you into the right frame
+      in the right time as time doesn't wait. Fifo solutions steps in then at Fifo Solutions we are committed to implementing corporate values and operating
+      models to achieve the zenith in performance. We believe in a no compromise policy and strive to attain excellence. We have a network of highly capable delivery
+      framework for supporting and catering to the needs of our diverse consultants base.</h3>
+      <p class="para text-secondary"><strong>Project managers:</strong> Fully certified experts who can help manage your projects and ensure on time delivery.
               When you need personnel you can trust to drive your project to completion, our project managers are ready to provide the leadership to get the
                job done.Are you ready to make a career change in a rapidly growing industry? We are always looking
               for top talent to join the fifo team! New opportunities emerge each day with our IT Professional Services
@@ -89,16 +82,16 @@ Our objective is to have a real collaboration with your company and become extra
                   and IT Solutions Division,Whether you have a collection of existing applications or on the lookout
                    to implement your first.</p>
             <h3>IT Recruiting</h3>
-            <p class="para text-secondary">We have extensive expertise filling roles across several IT specialties, and we use our own experience in IT to vet any candidates we send your way. We can help you find the right IT professional for your business quickly, without taking up your team’s time.</p>
-
-
-             <h1 class="heading-1">IT consulting services</h1>
-             <p class="para text-secondary">Our consulting services involve a wide range of services like Business Intelligence, Big Data Analytics, SAP Practice, and Staff Augmentation. Our management consulting services focus on our clients' most critical issues and opportunities: strategy, marketing, organization, operations, technology, transformation, digital, advanced analytics, corporate finance, mergers & acquisitions and sustainability across all industries and geographies Being the global IT solutions and Consulting services and Staff Augmentation company, we have a panel of senior IT professionals working on niche skills and cutting edge technologies to screen the candidates on different technology domains. Advithri Services have a high intensity of talented and experienced professionals with a proven track record of improvements and succession in those improvements. Mobilizing the right resources at the right time so as to identify the opportunities and its standards thereof achieving those standards with superior quality offers strategic and operational initiatives.Information technology is always evolving and having access to industry guidance and expert knowledge is crucial to helping you reach your business goals. You need IT consulting services you can trust to ensure your technology base is as efficient and effective as possible.</h3>
+            <p class="para text-secondary">We have specializing in permanent staffing, contract staffing, RPO in both IT& Non IT sectors across all verticals.
+              We have a proven delivery track record and having core professionals in our recruitment team.We have extensive expertise filling roles across several IT specialties, and we use our own experience in IT to vet any candidates we send your way. We can help you find the right IT professional for your business quickly, without taking up your team’s time.</p>
+            <h1 class="heading-1">IT consulting services</h1>
+             <p class="para text-secondary">Our consulting services involve a wide range of services like Business Intelligence, Staff Augmentation. Our management consulting services focus on our clients' most critical issues and opportunities: strategy, marketing, organization, operations, technology,corporate finance, mergers across industries and geographies Being the IT solutions and Consulting services and Staff Augmentation company, we have a panel of senior IT professionals working on skills and cutting edge technologies to screen the candidates on different technology domains.Fifo Solutions Services have a high intensity of talented and experienced professionals with a proven track record of improvements and succession in those improvements. Mobilizing the right resources at the
+               right time so as to identify the opportunities and its standards thereof achieving those standards with superior quality offers strategic and operational initiatives.</h3>
               <h3>IT management consultancy</h3>
              <p class="para text-secondary">Fifosolutions is a leading provider of services and solutions to clients across the United States and globally. Many of these clients are large national and international organizations.
                Organizations need individuals with cloud skills to help transform their business.</p>
              <h3>Business operations</h3>
-             <p class="para text-secondary">We will provide job, training  all terms and conditions of consultant without regard to their race, color, religion, national origin, gender identity, age, protected veteran status, disability, or other protected categories under the applicable law.</p>
+             <p class="para text-secondary">With our business intelligence that includes courses from Dell, Oracle, and SAP, you can develop solid business intelligence and analytical skills and learn how to access the right data to enable you to make better-informed decisions in less time.</p>
        </div>
      </div>
    </div>
