--- a/root/pages/index.html
+++ b/root/pages/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-md navbar-dark ">
+      <nav class="navbar navbar-expand-md fixed-top navbar-dark ">
          <a href="index.html" class="navbar-brand ml-3"><img src="../images/output-onlinepngtools.png" class="logo" alt="" style="width:130px;height:75px;float:left;"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -53,7 +53,7 @@
    <main>
     <!--section1-->
      <div class="slide-container">
-       <div class="slide-box" style="background-image: url('../images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg');">
+       <div class="slide-box" style="background-image: url('../images/campaign-creators-qCi_MzVODoU-unsplash.jpg');">
            <div class="slide-box-containt">
             <h2>Success usually comes to those who are too busy to be looking for it</h2>
            </div>
@@ -66,7 +66,7 @@
        </div>
        <div class="slide-box" style="background-image:url('../images/pexels-christina-morillo-1181304.jpg');">
          <div class="slide-box-containt">
-            <h2>WE will provide you the job by giving training also.</h2>
+            <h2>WE will provide you the job by giving training.</h2>
          </div>
        </div>
      </div>
@@ -77,7 +77,7 @@
     </div>
     <div class="service-box">
       <div class="single-service">
-        <img src="../images/pexels-oleg-magni-2058130.jpg" alt="">
+        <img src="../images/thomas-lefebvre-gp8BLyaTaA0-unsplash.jpg" alt="">
         <div class="overlay"></div>
         <a href="jobreg.html">
         <div class="service-desc">
